MCR-3143 apply recent design ideas to resource resolution